--- a/browser-tools-mcp/package.json
+++ b/browser-tools-mcp/package.json
@@ -1,47 +1,22 @@
 {
-  "name": "@agentdeskai/browser-tools-mcp",
-  "version": "1.2.0",
-  "description": "MCP (Model Context Protocol) server for browser tools integration",
+  "name": "browser-tools-mcp",
+  "version": "1.0.0",
+  "description": "MCP plugin for browser tools integration",
   "main": "dist/mcp-server.js",
-  "bin": {
-    "browser-tools-mcp": "dist/mcp-server.js"
-  },
   "scripts": {
-    "inspect": "tsc && npx @modelcontextprotocol/inspector node -- dist/mcp-server.js",
-    "inspect-live": "npx @modelcontextprotocol/inspector npx -- @agentdeskai/browser-tools-mcp",
+    "dev": "tsc -w",
     "build": "tsc",
-    "start": "tsc && node dist/mcp-server.js",
-    "prepublishOnly": "npm run build",
-    "update": "npm run build && npm version patch && npm publish"
+    "test": "jest"
   },
-  "keywords": [
-    "mcp",
-    "model-context-protocol",
-    "browser",
-    "tools",
-    "debugging",
-    "ai",
-    "chrome",
-    "extension"
-  ],
-  "author": "AgentDesk AI",
-  "license": "MIT",
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.4.1",
-    "body-parser": "^1.20.3",
-    "cors": "^2.8.5",
-    "express": "^4.21.2",
-    "llm-cost": "^1.0.5",
-    "node-fetch": "^2.7.0",
-    "ws": "^8.18.0"
+    "ws": "^8.13.0",
+    "express": "^4.18.2",
+    "typescript": "^5.0.4"
   },
   "devDependencies": {
-    "@types/ws": "^8.5.14",
-    "@types/body-parser": "^1.19.5",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.0",
-    "@types/node": "^22.13.1",
-    "@types/node-fetch": "^2.6.11",
-    "typescript": "^5.7.3"
+    "@types/node": "^18.16.3",
+    "@types/ws": "^8.5.4",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0"
   }
 }
